Feat:serviceInfo query
